fix: dark mode change fixed

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -714,6 +714,15 @@ video {
 .h-screen {
   height: 100vh;
 }
+.h-\[40\] {
+  height: 40;
+}
+.h-\[20px\] {
+  height: 20px;
+}
+.h-\[30px\] {
+  height: 30px;
+}
 .min-h-\[calc\(100vh-80px\)\] {
   min-height: calc(100vh - 80px);
 }
@@ -767,6 +776,42 @@ video {
 }
 .w-full {
   width: 100%;
+}
+.w-\[\] {
+  width: ;
+}
+.w-\[40px\] {
+  width: 40px;
+}
+.w-\[50px\] {
+  width: 50px;
+}
+.w-\[90px\] {
+  width: 90px;
+}
+.w-\[80px\] {
+  width: 80px;
+}
+.w-\[0px\] {
+  width: 0px;
+}
+.w-\[100px\] {
+  width: 100px;
+}
+.w-\[1200px\] {
+  width: 1200px;
+}
+.w-\[10px\] {
+  width: 10px;
+}
+.w-\[1000px\] {
+  width: 1000px;
+}
+.w-\[150px\] {
+  width: 150px;
+}
+.w-\[95px\] {
+  width: 95px;
 }
 .max-w-6xl {
   max-width: 72rem;
@@ -923,6 +968,9 @@ video {
 .border-0 {
   border-width: 0px;
 }
+.border-2 {
+  border-width: 2px;
+}
 .border-b {
   border-bottom-width: 1px;
 }
@@ -947,6 +995,10 @@ video {
 .border-gray-800 {
   --tw-border-opacity: 1;
   border-color: rgb(31 41 55 / var(--tw-border-opacity, 1));
+}
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity, 1));
 }
 .border-b-gray-300 {
   --tw-border-opacity: 1;
@@ -1000,6 +1052,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(22 163 74 / var(--tw-bg-opacity, 1));
 }
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
+}
 .bg-red-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity, 1));
@@ -1007,6 +1063,19 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+.bg-purple-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(168 85 247 / var(--tw-bg-opacity, 1));
+}
+.bg-\[\#fffffff\] {
+  background-color: #fffffff;
+}
+.bg-\[\#\] {
+  background-color: #;
+}
+.bg-\[\] {
+  background-color: ;
 }
 .object-contain {
   -o-object-fit: contain;
@@ -1327,6 +1396,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
+.hover\:bg-\[\#6777ef\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(103 119 239 / var(--tw-bg-opacity, 1));
+}
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
@@ -1339,6 +1412,10 @@ video {
 .focus\:border-black:focus {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
+}
+.focus\:border-blue-500:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity, 1));
 }
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
